# nairobi-urban-forest-analysis

./: .gitignore  README.md  pyproject.toml
notebooks/: analysis.ipynb  test.ipynb
src/: gee_helpers.py  spectral_index.py
src/utils/: constants.py  paths.py
