[project]
name = "nairobi-urban-forest-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bottleneck>=1.6.0",
    "dask>=2025.11.0",
    "earthengine-api>=1.7.0",
    "eemont>=2025.7.1",
    "folium>=0.20.0",
    "geemap>=0.36.6",
    "geopandas>=1.1.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "python-dotenv>=1.2.1",
    "rioxarray>=0.20.0",
    "seaborn>=0.13.2",
    "xarray>=2025.10.1",
    "xee>=0.0.22",
]
